samples/_failures_safe/1761364087_200072_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15ff20aa.c: In function ‘main’:
./samples/SAFE/__tmp_15ff20aa.c:168:5: error: expected expression at end of input
  168 |     process_compression(
      |     ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_15ff20aa.c:168:5: error: too few arguments to function ‘process_compression’
./samples/SAFE/__tmp_15ff20aa.c:92:6: note: declared here
   92 | void process_compression(CompressionFunc compress, DecompressionFunc decompress) {
      |      ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_15ff20aa.c:168:5: error: expected declaration or statement at end of input
  168 |     process_compression(
      |     ^~~~~~~~~~~~~~~~~~~
